--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.r2dbc.password=orders
-spring.r2dbc.username=orders
-spring.r2dbc.url=r2dbc:postgres://localhost/orders
+spring.r2dbc.password=password
+spring.r2dbc.username=root
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/mysql
+
+#spring.r2dbc.url=r2dbc:postgres://localhost/orders
