--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+## Management Endpoints
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+
+## SQL DB Access
 spring.r2dbc.password=password
 spring.r2dbc.username=root
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/mysql
