--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,3 +1,4 @@
-spring.r2dbc.password=password
-spring.r2dbc.username=root
-spring.r2dbc.url=r2dbc:mysql://localhost:3306/mysql
+spring.r2dbc.password=bp
+spring.r2dbc.username=bp
+#spring.r2dbc.url=r2dbc:mysql://35.223.249.70:3306/mysql
+#spring.r2dbc.url=r2dbc:mysql://localhost:3306/mysql
