--- a/src/main/resources/application-cloud.properties
+++ b/src/main/resources/application-cloud.properties
@@ -1,1 +1,1 @@
-spring.r2dbc.url=r2dbc:mysql://${MYSQL_SERVICE_PORT_3306_TCP_ADDR}:${MYSQL_SERVICE_SERVICE_PORT}/bp
+spring.r2dbc.url=r2dbc:mysql://mysql-service:${MYSQL_SERVICE_SERVICE_PORT}/bp
