--- a/deploy/mysql.yaml
+++ b/deploy/mysql.yaml
@@ -1,14 +1,4 @@
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: mysql-secrets
-type: Opaque
-stringData:
-  MYSQL_ROOT_PASSWORD: password
-  MYSQL_DATABASE: bp
-  MYSQL_USER: bp
-  MYSQL_PASSWORD: bp
+
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -41,21 +31,20 @@ spec:
                 name: mysql-secrets
       volumes:
         - name: mysql-data
-          emptyDir: {}
-
-#          persistentVolumeClaim:
-#            claimName: mysql-data-disk
-#
-#apiVersion: v1
-#kind: PersistentVolumeClaim
-#metadata:
-#  name: mysql-data-disk
-#spec:
-#  accessModes:
-#    - ReadWriteOnce
-#  resources:
-#    requests:
-#      storage: 1Gi
+#          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: mysql-data-disk
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-data-disk
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
 ---
 apiVersion: v1
 kind: Service
