--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,2 +1,3 @@
-#spring.r2dbc.password=bp
-#spring.r2dbc.username=bp
+spring.r2dbc.password=bp
+spring.r2dbc.username=bp
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/bp
