--- a/deploy/app.yaml
+++ b/deploy/app.yaml
@@ -55,6 +55,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: app-and-db.demo.mykubernetes.cloud.
   name: app
   namespace: default
 spec:
